<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#ffffff"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
        android:id="@string/stMood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stMood"
        android:textSize="30dp"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:textColor="#000000" 
        android:textStyle="bold" 
        android:layout_gravity="center" 
        android:padding="15dp"/>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal">

    <ImageButton
        android:contentDescription="@string/stMad"
        android:id="@+id/ibtMad"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_weight="50"
        android:src="@drawable/mad" 
        android:layout_gravity="center" 
        android:background="@drawable/ibbg"/>

    
    <ImageButton
        android:contentDescription="@string/desc"
        android:id="@+id/ibtLove"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_weight="50"
        android:src="@drawable/love" 
        android:layout_gravity="center" 
        android:background="@drawable/ibbg"/>
    </LinearLayout>
    
</LinearLayout>